# mutiny-node

./: .dockerignore  .drone.yml  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile-Proxy  LICENSE  README.md  flake.nix  justfile  mutiny-web.code-workspace  rust-toolchain.toml
.cargo/: config
.github/workflows/: deploy-gh-pages.yml  feature.yml  preview.yml  production.yml  release.yml  test.yml
docs/: Testing.md
frontend/: .env.sample  .gitignore  build.sh  craco.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  workbox.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  env.d.ts  index.css  index.tsx  setupTests.ts
frontend/src/components/: ActionButton.tsx  AmountInput.tsx  Close.tsx  CodeTruncator.tsx  ConfirmDialog.tsx  Copy.tsx  DLItem.tsx  DialogModal.tsx  GlobalStateProvider.tsx  MainBalance.tsx  ManagerRouteProvider.tsx  More.tsx  MutinyToaster.tsx  PageTitle.tsx  QrCodeScanner.tsx  ReceiveLightning.tsx  ReceiveOnchain.tsx  ReceiveUnified.tsx  Router.tsx  ScreenMain.tsx  SettingStringsEditor.tsx  SimpleText.tsx  SyncOnInterval.tsx  TerminalProvider.tsx
frontend/src/routes/: App.test.tsx  App.tsx  Channels.tsx  ConfirmJoinDLC.tsx  ConfirmNewDLC.tsx  ConnectPeer.tsx  DLCs.tsx  Deposit.tsx  FinalJoinDLC.tsx  FinalNewDLC.tsx  JoinDLC.tsx  KitchenSink.tsx  ManagerRoot.tsx  NewDLC.tsx  NotFound.tsx  OnChain.tsx  OpenChannel.tsx  Peers.tsx  Receive.tsx  ReceiveFinal.tsx  ReceiveQR.tsx  Send.tsx  SendAmount.tsx  SendConfirm.tsx  SendFinal.tsx  Settings.tsx  Transactions.tsx  Utxos.tsx
frontend/src/styles/: index.ts
frontend/src/utility/: conversions.ts  dumb.ts  paymentType.test.ts  prettyPrintAmount.ts  prettyPrintTime.ts  queries.ts  screenWidth.ts  takeN.ts  takeNWidth.ts  truncator.ts
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs  utils.rs
ln-websocket-proxy/: Cargo.toml  README.md
ln-websocket-proxy/src/: lib.rs  main.rs
mutiny-core/: Cargo.toml  README.md  rust-toolchain.toml  webdriver.json
mutiny-core/src/: auth.rs  background.rs  bdkstorage.rs  blindauth.rs  cashu.rs  chain.rs  encrypt.rs  error.rs  esplora.rs  event.rs  federation.rs  fees.rs  gossip.rs  hermes.rs  indexed_db.rs  key.rs  keymanager.rs  labels.rs  ldkstorage.rs  lib.rs  lnurlauth.rs  localstorage.rs  logging.rs  lspclient.rs  messagehandler.rs  multiesplora.rs  node.rs  nodemanager.rs  notifications.rs  onchain.rs  payjoin.rs  peermanager.rs  proxy.rs  redshift.rs  router.rs  scorer.rs  socket.rs  storage.rs  subscription.rs  test_utils.rs  (+3 more)
mutiny-core/src/dlc/: mod.rs  storage.rs
mutiny-core/src/lsp/: lsps.rs  mod.rs  voltage.rs
mutiny-core/src/networking/: mod.rs  proxy.rs  socket.rs  tcp_socket.rs  websocket.rs  ws_socket.rs
mutiny-core/src/nostr/: client.rs  dlc.rs  mod.rs  nip47.rs  nip49.rs  nwc.rs  primal.rs
mutiny-core/src/scb/: message_handler.rs  mod.rs
mutiny-core/src/sql/: glue.rs  mod.rs
mutiny-core/src/surreal/: mod.rs
mutiny-core/test_inputs/: dlc_offer.json
mutiny-server/: .gitignore  Cargo.toml
mutiny-server/src/: config.rs  extractor.rs  main.rs  rocksdb.rs  routes.rs  sled.rs
mutiny-wasm/: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  worker.js
mutiny-wasm/src/: error.rs  indexed_db.rs  lib.rs  models.rs  utils.rs  waila.rs
node-manager/: Cargo.toml
node-manager/pkg/: node_manager.d.ts  node_manager.js  node_manager_bg.wasm  node_manager_bg.wasm.d.ts  package.json
node-manager/src/: api.rs  background.rs  bdkstorage.rs  chain.rs  dlc.rs  dlc_oracle.rs  dlcstorage.rs  encrypt.rs  error.rs  event.rs  fees.rs  invoice.rs  keymanager.rs  ldkstorage.rs  lib.rs  localstorage.rs  logging.rs  node.rs  nodemanager.rs  peermanager.rs  proxy.rs  seedgen.rs  socket.rs  storage.rs  tcpproxy.rs  utils.rs  wallet.rs
src/: chain.rs  error.rs  event.rs  gossip.rs  ldkstorage.rs  lib.rs  lspclient.rs  node.rs  nodemanager.rs  socket.rs  utils.rs  wallet.rs
websocket-tcp-proxy/: Cargo.toml  README.md
websocket-tcp-proxy/src/: main.rs
