cargo-features = ["per-package-target"]

[package]
name = "mutiny-core"
version = "1.7.13"
edition = "2021"
authors = ["Tony Giorgio <tony@mutinywallet.com>", "benthecarman <ben@mutinywallet.com>"]
description = "The core SDK for the mutiny node"
license = "MIT"
documentation = "https://docs.rs/mutiny-core"
homepage = "https://mutinywallet.com"
repository = "https://github.com/mutinywallet/mutiny-node"

[dependencies]
cfg-if = "1.0.0"
bip39 = { version = "2.0.0" }
bitcoin = { version = "0.32.2", default-features = false, features = ["std", "serde", "secp-recovery", "rand"] }
bdk_esplora = { version = "=0.18.0", default-features = false, features = ["std", "async-https"] }
bdk_chain = { version = "=0.19.0", features = ["std"] }
bdk_wallet = { version = "=1.0.0-beta.4", features = ["std"] }
bdk-macros = "0.6.0"
getrandom = { version = "0.2" }
itertools = "0.11.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
uuid = { version = "1.1.2", features = ["v4"] }
esplora-client = { version = "0.9", default-features = false, features = ["async"] }
lightning = { version = "0.0.124", default-features = false, features = ["max_level_trace", "grind_signatures", "std"] }
lightning-invoice = { version = "0.32.0", features = ["serde"] }
lightning-rapid-gossip-sync = { version = "0.0.124" }
lightning-background-processor = { version = "0.0.124", features = ["futures"] }
lightning-transaction-sync = { version = "0.0.124", default-features = false, features = ["esplora-async-https"] }
lightning-liquidity = "0.1.0-alpha.5"
chrono = "0.4.22"
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["multipart", "json"] }
async-trait = "0.1.68"
url = { version = "2.3.1", features = ["serde"] }
cbc = { version = "0.1", features = ["alloc"] }
aes = { version = "0.8" }
jwt-compact = { version = "0.8.0-beta.1", features = ["es256k"] }
argon2 = { version = "0.5.0", features = ["password-hash", "alloc"] }
bincode = "1.3.3"
hex-conservative = "0.1.1"
async-lock = "3.2.0"

base64 = "0.13.0"
pbkdf2 = "0.11"
aes-gcm = "0.10.1"

log = "0.4.18"
futures = "0.3.25"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
mockall = "0.11.2"
web-sys = { version = "0.3.65", features = ["console"] }
js-sys = "0.3.65"

[features]
default = []
ignored_tests = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.38" }
gloo-net = { version = "0.4.0" }
web-time = "1.1"
gloo-timers = { version = "0.3.0", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
lightning-net-tokio = "0.0.124"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
