[package]
name = "mutiny-server"
version = "0.3.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mutiny-core = { path = "../mutiny-core" }

anyhow = "1.0.70"
async-trait = "0.1.68"
axum = "0.7.4"
bitcoin = { version = "0.30.2" }
clap = { version = "4.1.14", features = ["derive"] }
lightning = { version = "0.0.121", default-features = false, features = ["max_level_trace", "grind_signatures", "std"] }
lightning-invoice = { version = "0.29.0", features = ["serde"] }
log = "0.4.18"
pretty_env_logger = "0.5.0"
serde_json = { version = "^1.0" }
shutdown = "0.2.1"
futures-util = { version = "0.3", default-features = false }
sled = "0.34.7"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
