[package]
name = "mutiny-server"
version = "0.3.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mutiny-core = { path = "../mutiny-core" }

anyhow = "1.0.70"
async-trait = "0.1.68"
bitcoin = { version = "0.29.2" }
clap = { version = "4.1.14", features = ["derive"] }
futures-util = { version = "0.3", default-features = false }
log = "0.4.18"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "^1.0" }
shutdown = "0.2.1"
sled = "0.34.7"
tokio = { version = "1.27.0", features = ["full"] }
