cargo-features = ["per-package-target"]

[package]
name = "node-manager"
version = "0.2.2"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
ln-websocket-proxy = "0.3.0"
#lnurl-rs = { version = "0.1.5", default-features = false, features = ["async"] }

cfg-if = "1.0.0"
wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.4"
bip39 = { version = "1.0.1" }
bip32 = "0.4.0"
bitcoin-bech32 = "0.12"
js-sys = "0.3.60"
secp256k1 = "0.24.0"
bitcoin_hashes = { version = "0.11", default-features = false }
bitcoin = { version = "0.29.2", default-features = false, features = ["serde", "secp-recovery"] }
bdk = { git = "https://github.com/benthecarman/bdk", branch = "tmp", default-features = false, features = ["keys-bip39", "esplora", "use-esplora-reqwest", "async-interface"] }
bdk-macros = "0.6.0"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
gloo-storage = "0.2.2"
uuid = { version = "1.1.2", features = ["v4"] }
lightning = { git = "https://github.com/benthecarman/rust-lightning", branch = "tmp", default-features = false, features = ["max_level_trace", "grind_signatures", "no-std"] }
lightning-background-processor = { git = "https://github.com/benthecarman/rust-lightning", branch = "tmp", default-features = false, features = ["futures"] }
lightning-transaction-sync = { git = "https://github.com/benthecarman/rust-lightning", branch = "tmp", default-features = false, features = ["async-interface", "esplora-async"] }
lightning-invoice = { git = "https://github.com/benthecarman/rust-lightning", branch = "tmp", default-features = false, features = ["no-std"] }
lightning-rapid-gossip-sync = { git = "https://github.com/benthecarman/rust-lightning", branch = "tmp", default-features = false, features = ["no-std"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
chrono = "0.4.22"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
async-trait = "0.1.60"

base64 = "0.13.0"
pbkdf2 = "0.11"
aes-gcm = "0.10.1"
rand_core = { version = "0.6", features = ["std"] }
crossbeam-channel = "0.5.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
log = "0.4.17"
gloo-net = "0.2.4"
futures = "0.3.25"
thiserror = "1.0"
web-sys = { version = "0.3.60", features = ["console"] }
anyhow = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
mockall = "0.11.2"

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
